--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,130 @@
 body {
-    background: url(/static/images/titulnik_1.jpg);
-    background-size:100% 142%;
-    font-size: 30pt;
+    margin: 0;
+    padding: 20px;
+    min-height: 100vh;
+    background: radial-gradient(rgb(16, 116, 80), rgb(11, 78, 47));
+    border: 30px ridge rgb(158, 113, 45);
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
 }
-.hp {
+
+.screen:after {
+    content: '';
+    display: block;
+    background-color: white;
+    position: absolute;
+    bottom: 28px;
+    right: 48px;
+    height: 15px;
+    width: 120px;
+    border-radius: 10px;
+}
+
+.screen {
+    display: none;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.screen.show {
+    display: block!important;
+}
+
+.loading-screen {
+
+}
+
+.start-screen {
+
+}
+
+.hp-block-wrapper,
+.score-block-wrapper {
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    background: url(/static/images/heart.png) center center ;
-    background-size: 100% 100%;
+    width: 70%;
+    min-height: 56px;
+    display: flex;
+    align-items: center;
 }
-#hp_block_wrapper {
-    text-align: left;
-    width: 60%;
+.score-block-wrapper {
+    width: 30%;
+    text-align: right;
+    color: white;
+    font-size: 1.9rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.task {
     margin: 20px auto;
+    color: white;
+    font-size: 1.8rem;
+    font-weight: normal;
 }
-.container {
+
+.answer-buttons-wrapper {
     margin: 0 auto;
     text-align: center;
+    max-width: 500px;
 }
-button {
+
+.timer-wrapper {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.timer {
+    width: 100%;
+    height: 8px;
+    background-image: url(/static/images/mel.png);
+    background-size: contain;
+}
+
+.end-game-screen {
+
+}
+
+.main-game-screen {
+
+}
+
+
+.hp {
+    display: inline-block;
+    width: 60px;
+    height: 50px;
+    margin-right: 15px;
+    background: url(/static/images/heart.png) center center;
+    background-size: 100% 100%;
+}
+
+.answer-btn {
+    display: inline-block;
+    background-color: transparent;
     height: 100px;
     width: 200px;
     margin: 20px;
     font-size: 40pt;
-    border: 2px double #9ACD32;
-    border-radius: 10px
+    border: 3px solid white;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .answer-btn {
+    height: 70px;
+    width: 140px;
+    margin: 10px;
+    font-size: 30pt;
+  }
+}
+
 .replay_button {
     height: 100px;
     width: 100px;
@@ -35,11 +133,4 @@ button {
 }
 .start_button {
     margin: 200px;
-}
-h1 {
-    color: #FF4500;
-}
-#task {
-    border: 2px solid #FF7F50;
-    border-radius: 15px;
 }
