--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,19 @@ body {
 
 }
 
+.boy {
+    position: absolute;
+    bottom: 0;
+    width: 35%;
+    max-width: 350px;
+}
+
+@media (max-width: 500px) {
+    .boy {
+        display: none;
+    }
+}
+
 .hp-block-wrapper,
 .score-block-wrapper {
     display: inline-block;
@@ -87,7 +100,14 @@ body {
 }
 
 .end-game-screen {
+    padding-top: 10%;
+}
 
+.start-screen h1,
+.end-game-screen h1 {
+    width: 100%;
+    text-align: center;
+    color: white;
 }
 
 .main-game-screen {
@@ -134,4 +154,15 @@ body {
 }
 .start_button {
     margin: 200px;
+}
+
+.vk-share-btn-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+.vk-share-btn-wrapper label {
+    cursor: pointer;
+    margin-right: 15px;
 }
