--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .end-game-screen {
-
+    text-align: center;
 }
 
 .main-game-screen {
@@ -127,10 +127,10 @@ body {
 }
 
 .replay_button {
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
     border-radius: 20px;
-    margin-top: 250px
+    cursor: pointer;
 }
 .start_button {
     margin: 0 auto;
