--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,14 +33,6 @@ body {
     display: block!important;
 }
 
-.loading-screen {
-
-}
-
-.start-screen {
-   
-}
-
 .boy {
     position: absolute;
     bottom: 0;
@@ -100,7 +92,7 @@ body {
 }
 
 .end-game-screen {
-    padding-top: 10%;
+    padding-top: 3%;
 }
 
 .start-screen h1,
@@ -148,6 +140,8 @@ body {
 }
 
 .replay_button {
+    margin: 0 auto;
+    display: block;
     height: 120px;
     width: 120px;
     border-radius: 20px;
@@ -158,7 +152,7 @@ body {
     height: 130px;
     width: 130px;
     display: block;
-    margin-top: 100px;
+    margin-top: 30px;
     border-radius: 50%;
     background-color: transparent;
     border: 1px solid transparent;
@@ -166,10 +160,33 @@ body {
     background-image: url(/static/images/start.png);
 }
 
-.start-screen {
-
+.start-screen .main-title {
+    font-size: 2.5rem;
+    letter-spacing: 5px;
+    margin-top: 1.66em;
+    margin-bottom: 0;
+}
+.buttons-wrapper {
+    display: flex;
+    justify-content: center;
 }
 
+.buttons-wrapper button {
+    margin: 10px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+@media (max-width: 500px) {
+    .buttons-wrapper {
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .buttons-wrapper button {
+        display: block;
+        margin-top: 10px;
+    }
+}
 
 .vk-share-btn-wrapper {
     display: flex;
@@ -189,11 +206,10 @@ body {
 }
 
 .instruction_button {
-    margin: 0 auto;
-    height: 50px;
-    width: 150px;
+    margin: 10px auto;
+    padding: 10px 15px;
     display: block;
-    border-radius: 20px;
+    border-radius: 5px;
     border: 2px solid white;
     color: white;
     background-color: transparent;
