fixed ratings page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,7 +294,7 @@ body {
     margin-top: 80px;
     text-align: center;
     color: white;
-    max-height: calc(100vh - 200px);
+    /*max-height: calc(100vh - 200px);*/
     max-width: 550px;
     overflow: auto;
 }
