--- a/arifmetika/static/css/style.css
+++ b/arifmetika/static/css/style.css
@@ -100,7 +100,7 @@ body {
     width: 100%;
     height: 8px;
     margin: 0 auto;
-    background-image: url(/static/images/mel.png);
+    background-image: url(static/images/mel.png);
     background-position: center;
 }
 
@@ -126,7 +126,7 @@ body {
     width: 60px;
     height: 50px;
     margin-right: 15px;
-    background: url(/static/images/heart.png) center center;
+    background: url(static/images/heart.png) center center;
     background-size: 100% 100%;
 }
 @media (max-width: 600px) {
@@ -177,7 +177,7 @@ body {
     background-color: transparent;
     border: 1px solid transparent;
     cursor: pointer;
-    background-image: url(/static/images/start.png);
+    background-image: url(static/images/start.png);
 }
 
 .start-screen .main-title {
