--- a/horse/static/css/style.css
+++ b/horse/static/css/style.css
@@ -19,7 +19,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
 }
 #back {
     max-height: 420px;
